app/src/main/java/sdk/api/development/examples/festivo_api/errors/RateLimitError.java
package sdk.api.development.examples.festivo_api.errors;

public class RateLimitError extends RuntimeException {
    
}
